--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "author": "Sam Orgill",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.17.1",
+    "generate-password": "^1.7.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^3.6.3",
     "mongoose": "^8.8.4",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
