--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,16 @@
+version: "3"
 services:
-  backend:
-    build: .
-    ports:
-      - "8011:8010"
-    volumes:
-      - .:/app
-    environment:
-      - PORT=8010
-      - NODE_ENV=development
-      - MONGODB_URI=mongodb://mongo:27017/ma_base_student
-    depends_on:
-      - mongo
-    restart: unless-stopped
-
   mongo:
     image: mongo
     ports:
       - "27017:27017"
-    volumes:
-      - mongo-data:/data/db
-
-volumes:
-  mongo-data:
+    container_name: mongo
+  backend:
+    build: .
+    ports:
+      - "8010:8010"
+    container_name: backend
+    depends_on:
+      - mongo
+    environment:
+      - MONGO_URI=mongodb://mongo:27017/student_db
