--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon --watch . server.js"
   },
   "author": "Sam Orgill",
   "license": "ISC",
@@ -21,7 +21,8 @@
     "mongodb": "^3.6.3",
     "mongoose": "^8.8.4",
     "multer": "^1.4.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
