--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Test and Deploy to Render
+name: Build, Test and Deploy to Render
 
 on:
   push:
@@ -8,36 +8,45 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
-      MONGODB_URI: ${{ secrets.MONGODB_URI }}
-      
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '22.14.0'  
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Check that app starts without error
+      - name: Build and start services with docker-compose
         run: |
-            npm start &                   # lance l'app en arrière-plan
-            SERVER_PID=$!                # enregistre le PID du serveur
-            sleep 5                      # attend quelques secondes
-            kill $SERVER_PID             # arrête le serveur proprement
+          docker-compose up -d --build
 
+      - name: Wait for backend to be ready
+        run: |
+          echo "Waiting for backend to start..."
+          for i in {1..15}; do
+            if curl -s http://localhost:8010/health || curl -s http://localhost:8010/; then
+              echo "Backend is up!"
+              exit 0
+            fi
+            sleep 2
+          done
+          echo "Backend did not start in time"
+          docker-compose logs backend
+          exit 1
+
+      - name: Stop services
+        run: docker-compose down
 
   deploy:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger Render Deploy
-        run: |
-          curl -X POST https://api.render.com/v1/services/srv-d0d4l9umcj7s739rmni0/deploys \
-          -H 'Accept: application/json' \
-          -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-          -d ''
+       - name: Trigger Render Deploy
+         env:
+            RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+            RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
+         run: |
+            curl -X POST https://api.render.com/v1/services/${RENDER_SERVICE_ID}/deploys \
+                 -H 'Accept: application/json' \
+                 -H "Authorization: Bearer $RENDER_API_KEY" \
+                 -d ''
